# ariston-ai

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  architecture.md  config.py  demos.py  docker-compose.yml  gunicorn.conf.py  main.py  memory.db  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements-pinned.txt  requirements.txt  setup_vinci.sh
.github/agents/: MLengineer.md  ModelLayer ImprovementAgentt.md  aisystemsagent.md  backendengenieer.md  infra-devops.md  masteragent.md  observability.md  performance.md  refractor.md  routerinteligence.md  safety-clinical.md  safety.md  testgeneration.md  workfflowagent.md
app/: main.py
app/agents/: __init__.py  router.py
app/core/: websocket.py
app/localization/: __init__.py  partner_db.py  regulatory_mapping.py  router.py  service.py
app/pilot_programs/: __init__.py  (+2 more)
ariston_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ariston_pharma/: pdf_export.py  router.py  service.py
benchmarks/: eval_logs.jsonl
darwina/: router.py  service.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
hippokron/: router.py  service.py
static/: index.html
tests/: test_api_and_routing.py  test_guardrails.py  test_infrastructure.py  test_latam.py  test_models.py  test_new_components.py  test_observability.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_roadmap_features.py  test_router.py
vinci_core/: __init__.py  engine.py  engine_context.py  engine_stream.py  logger.py  metrics.py  router.py  schemas.py  types.py
(+120 files in other folders)
